# pl_szkielet07b_win

./: CMakeLists.txt  cube.cpp  fshaderPionek.glsl  fshaderSkyBox.glsl  fshaderSwiatlo.glsl  fshaderTlo.glsl  gra.txt  graold.txt  gshader.glsl  main_file.cpp  obj3d.cpp  obj3d.h  pl_szkielet07b_win.cbp  pl_szkielet07b_win.depend  pl_szkielet07b_win.layout  prepareObjects.h  teapot.cpp  texture.cpp  texture.h  vshaderPionek.glsl  vshaderPodloga.glsl  vshaderSkyBox.glsl  vshaderSwiatlo.glsl  vshaderTlo.glsl
